tests/Checker/everything/errors/19b.vc
int main() {
    int a[] = {1, 2, 3};
    a();
    return 1;
}
